--- a/src/metodos/Principal.form
+++ b/src/metodos/Principal.form
@@ -165,6 +165,9 @@
                     <EtchetBorder/>
                   </Border>
                 </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Tahoma" size="12" style="1"/>
+                </Property>
               </Properties>
             </Component>
           </SubComponents>
